Avance del 17 de junio: mejoras en login, home, tareas y módulos

--- a/package.json
+++ b/package.json
@@ -14,20 +14,32 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.0.2",
+    "@angular/cdk": "^20.0.3",
     "@angular/common": "^20.0.2",
     "@angular/compiler": "^20.0.2",
     "@angular/core": "^20.0.2",
-    "@angular/forms": "^20.0.2",
+    "@angular/forms": "^20.0.3",
+    "@angular/material": "^20.0.3",
+    "@angular/material-moment-adapter": "^20.0.3",
     "@angular/platform-browser": "^20.0.2",
     "@angular/platform-browser-dynamic": "^20.0.2",
     "@angular/router": "^20.0.2",
+    "@capacitor/android": "^7.3.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.3.0",
     "@capacitor/haptics": "7.0.1",
+    "@capacitor/ios": "^7.3.0",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/angular": "^8.0.0",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
+    "@ionic/angular": "^8.6.1",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "ionicons": "^7.0.0",
+    "nanoid": "^5.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
