--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@angular-eslint/prefer-standalone": "off",
+        "@angular-eslint/prefer-NgModule": "true",
         "@angular-eslint/component-class-suffix": [
           "error",
           {
