--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "allowedCommonJsDependencies": ["localforage"],
             "assets": [
               {
                 "glob": "**/*",
@@ -140,6 +141,5 @@
         }
       }
     }
-  },
-  "defaultProject": "app"
+  }
 }
