--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@angular/platform-browser": "^20.0.2",
     "@angular/platform-browser-dynamic": "^20.0.2",
     "@angular/router": "^20.0.2",
+    "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.3.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.3.0",
+    "@capacitor/geolocation": "^7.1.2",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "^7.3.0",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/network": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@fullcalendar/angular": "^6.1.17",
     "@fullcalendar/core": "^6.1.17",
@@ -37,7 +40,9 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@ionic/angular": "^8.6.1",
+    "@ionic/storage-angular": "^4.0.0",
     "@lottiefiles/lottie-player": "^2.0.12",
+    "cordova-sqlite-storage": "^7.0.0",
     "ionicons": "^7.0.0",
     "nanoid": "^5.1.5",
     "rxjs": "~7.8.0",
