--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PlanGO",
+  "name": "plango",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^20.0.2",
     "@angular/platform-browser-dynamic": "^20.0.2",
     "@angular/router": "^20.0.2",
+    "@awesome-cordova-plugins/core": "^8.0.2",
+    "@awesome-cordova-plugins/sqlite": "^8.0.2",
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.3.0",
     "@capacitor/app": "7.0.1",
@@ -42,9 +44,13 @@
     "@ionic/angular": "^8.6.1",
     "@ionic/storage-angular": "^4.0.0",
     "@lottiefiles/lottie-player": "^2.0.12",
+    "body-parser": "^2.2.0",
     "cordova-sqlite-storage": "^7.0.0",
+    "crypto": "^1.0.1",
+    "express": "^5.1.0",
     "ionicons": "^7.0.0",
     "nanoid": "^5.1.5",
+    "nodemailer": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -77,5 +83,16 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.8.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kthg2033/PlanGO.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Kthg2033/PlanGO/issues"
+  }
 }
