🚀 Agregando página de dashboard

--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@ionic/storage-angular": "^4.0.0",
     "@lottiefiles/lottie-player": "^2.0.12",
     "body-parser": "^2.2.0",
+    "chart.js": "^4.5.0",
     "cordova-sqlite-storage": "^7.0.0",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "ionicons": "^7.0.0",
     "nanoid": "^5.1.5",
+    "ng2-charts": "^8.0.0",
     "nodemailer": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
