--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,4 +1,4 @@
-# Producción
+# production
 last 2 Chrome versions
 last 2 Firefox versions
 last 2 Edge versions
@@ -6,7 +6,8 @@ last 2 Safari versions
 Firefox ESR
 not IE 11
 
-# Desarrollo (ng serve)
+# development
 last 1 Chrome version
 last 1 Firefox version
 last 1 Edge version
+
