--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
     "@angular/compiler-cli": "^20.0.2",
     "@angular/language-service": "^20.0.2",
     "@capacitor/cli": "7.3.0",
+    "@cypress/webpack-preprocessor": "^6.0.4",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "cypress": "^14.5.1",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
@@ -83,6 +85,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-loader": "^9.5.2",
     "typescript": "~5.8.3"
   },
   "description": "An Ionic project",
